--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Animation</string>
+    <string name="title_activity_quotes_detail_screen">QuotesDetailScreen</string>
 </resources>
